--- a/_config.yml
+++ b/_config.yml
@@ -4,15 +4,15 @@ title: Bheema #Keep it short
 email: your@email.com
 
 
-baseurl: /bheema
+baseurl: /film-101-blog
 
 sass:
  style: compressed
- 
- 
+
+
 # Tracker
 analytics: UA-83979019-1
- 
+
 ### exclude the instructions / write-up in the README.md
 exclude:
 - README.md
