--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #Created by webjeda - http://webjeda.com
 
-title: Bheema #Keep it short
-email: your@email.com
+title: Film101 Blog
+email: rowan.self@gmail.com.com
 
 
 baseurl: /film-101-blog
