first draft for post 1

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 #Created by webjeda - http://webjeda.com
 
-title: Film101 Blog
+title: Films features and their relation to their themes
 email: rowan.self@gmail.com.com
 
 
