--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 #Created by webjeda - http://webjeda.com
 
-title: Bheema #Keep it short
-email: your@email.com
+title:none  #Keep it short
+email: vanithakbgowda@gmail.com
 
 
-baseurl: /bheema
+baseurl: /TravellingIsMyPassion
 
 sass:
  style: compressed
