--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 #Created by webjeda - http://webjeda.com
 
-title:  #Keep it short
+title:Life Is A Beautiful Journey  #Keep it short
 email: vanithakbgowda@gmail.com
 
 
-#baseurl: /TravellingIsMyPassion
+baseurl: /TravellingIsMyPassion
 
 sass:
  style: compressed
